# z

./: .cursorrules  .gitignore  Cargo.toml  INSTALLATION_GUIDE.md  README.md  deploy-extension.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-commit.md  test-typescript.z  test-z-markup.z  turbo.json
compiler/: Cargo.toml  README.md  grammar.pegjs
compiler/stdlib/: registry.json
crates/core/: Cargo.toml
crates/parser/: Cargo.toml
doc/: README.md  automatic-scaffolding.md  core-principles.md  roadmap.md  specification.md  syntax.md  target-blocks.md
doc/examples/: getting-started.md
examples/: README.md  test-invalid.z  test-workspace.z
examples/GameDev/: main.z
examples/MultiTargetDemo/: main.z
examples/SocialPlatform/: main.z
examples/ValidationDemo/: main.z
lsp/: README.md  package-lock.json  package.json  tsconfig.json
lsp/src/: embedded-registry.json  registry.ts  server.ts
tests/: test-standalone.z  test-workspace.z
vscode/: LICENSE  language-configuration.json  package-lock.json  package.json  z-language-0.1.0.vsix  z-language-0.1.1.vsix  z-language-0.1.2.vsix  z-language-0.2.0.vsix  z-language-0.2.1.vsix  z-language-0.2.4.vsix
vscode/src/: extension.ts
vscode/syntaxes/: z.tmLanguage.json
z-language-server/: SCAFFOLDING_IMPLEMENTATION.md  TRANSFORMATION_COMPLETE.md  package.json
z-language-server/src/: basic.test.ts  document.ts  embedded-registry.json  file-lsp-server.test.ts  lsp-server.test.ts  ts-client.test.ts  ts-client.ts  z-lsp-server.ts  z-markup-parser.test.ts  z-markup-parser.ts  z-registry.ts
(+14 files in other folders)
