[workspace]
resolver = "2"
members = [
    "crates/ast",
    "crates/parser",
    "crates/core",
    "crates/cli"
]

[workspace.package]
version = "0.1.0"
authors = ["Facundo Fierro"]
license = "MIT"
edition = "2021"
repository = "https://github.com/facundofierro/z-lang"
homepage = "https://github.com/facundofierro/z-lang"
documentation = "https://github.com/facundofierro/z-lang"

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

# Build and development tools
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true